Fix issue where lens was covered by other elements

--- a/css/magnify.css
+++ b/css/magnify.css
@@ -24,6 +24,8 @@
   cursor: none;
   /* Hide the lens by default */
   display: none;
+  /* Place the lens on top of other elements */
+  z-index: 100;
 }
 .magnify .magnify-lens.loading {
   background: none !important;
